--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,380 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&family=Lexend+Deca&display=swap');
+ 
+.nitro-container {
+    background: linear-gradient(rgb(157, 134, 243), rgb(223, 134, 244));
+    height: 39em;
+    width: 100%;
+    padding-bottom: 60px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.nav-container {
+    padding-top: 10px;
+    display: flex;
+    justify-content: space-around;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.nav-discordd {
+    color: white;
+    font-weight: 900;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
+    font-stretch: ultra-expanded;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.nav-discord {
+    color: white;
+    font-weight: 900;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
+    text-decoration: none;
+    font-stretch: ultra-expanded;
 }
-
-.App-link {
-  color: #61dafb;
+.download-nav {
+    display: grid;
+    grid-template-columns: auto auto auto auto auto auto;
+    grid-column-gap: 2.4em;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 200;
+    color: white;
+    align-content: center;
 }
+.login {
+    display: grid;
+    align-content: center;
+}
+.logbut{
+    border-radius: 40px;
+    width: 4.5em; 
+    height: 2.6em;
+    border-color: rgb(255, 255, 255);
+    border-style: none;
+}
+.sixth-body {
+    color: white;
+    background: rgb(35,39,42);
+    display: grid;
+    margin: 0em -0.5em -0.5em -0.5em;
+    height: 32em;
+    align-content: center;
+}
+.top-sixth {
+    display: grid;
+    grid-template-columns: auto auto auto auto auto;
+    justify-content: space-evenly;
+}
+.innerbutton{
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #5865f2;
+    color: white;
+    border-radius: 24px;
+    font-size: 12px;
+    /* width: 30%; */
+    margin-left: 10px;
+    padding: 0 8px;
+    line-height: 24px;
+}
+.buttons{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 50px;
+}
+.buttons2{
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+    align-items: center;
+}
+.section1{
+ width: 80%;
+ height: 25em;
+ display: flex;
+ margin: 0 auto;
+ margin-top: 56px;
+ margin-bottom: 112px;
+ z-index: 2;
+}
+.left{
+    width: 50%;
+    margin: 0 auto;
+    padding-top: 50px;
+}
+.right{
+    width: 50%;
+    height: 39em;
+}
+.nitro {
+    width: 300px;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+}
+.imagine-2 {
+    margin-top: 20px;
+    font-size: 17px;
+    text-align: start;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.openbutton {
+    margin-right: 40px;
+    margin-bottom: 24px;
+    display: flex;
+    justify-content: center;
+    border-radius: 28px;
+    padding: 14px 16px;
+    width: 13em; 
+    /* height: 3em; */
+    border-color: rgb(0, 0, 0);
+    font-size: 20px;
+    background-color: black;
+    color: white;
+    border-style: none;
+    align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.does-it{
+    padding: 56px 24px;
+}
+.openbutton2{
+    font-family: Arial, Helvetica, sans-serif;
+    border-radius: 28px;
+    width: 10em; 
+    height: 2.6em;
+    border-color: rgb(0, 0, 0);
+    font-size: 20px;
+    background-color: black;
+    color: white;
+    border-style: none;
+    margin-bottom: 24px;
+}
+.openbutton3 {
+    margin-right: 40px;
+    margin-bottom: 24px;
+    display: flex;
+    justify-content: center;
+    border-radius: 28px;
+    padding: 14px 16px;
+    width: 18em; 
+    /* height: 3em; */
+    border-color: rgb(0, 0, 0);
+    font-size: 20px;
+    background-color: black;
+    color: white;
+    border-style: none;
+    align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.openbutton4{
+    font-family: Arial, Helvetica, sans-serif;
+    border-radius: 28px;
+    width: 18em; 
+    height: 2.6em;
+    border-color: rgb(0, 0, 0);
+    font-size: 20px;
+    background-color: black;
+    color: white;
+    border-style: none;
+    margin-bottom: 24px;
+}
+.imagine-place {
+    color: #5865f2;
+    font-size: 32px;
+    margin-top: 0px;
+    font-weight: 900;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.reliable {
+    display: grid;
+    justify-content: center;
+    margin-bottom: 90px;
+
+} 
+.reliable-1 {
+    font-size: clamp(20px,4vw,40px);
+    font-size: 40px;
+    font-weight: 800;
+    line-height: 95%;
+    margin-top: 100px;
+    margin-bottom: 0;
+    text-transform: uppercase;
+    text-rendering: geometricPrecision;
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(35,39,42);
+    text-align: center;
+    font-stretch: ultra-expanded;
+}
+.reliable-2 {
+    font-size: 20px;
+    font-weight: lighter;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: rgb(35,39,42);
+}
+.section2{
+    width: 80%;
+    margin: 0 auto;
+}
+.log{
+    text-decoration: none;
+    color: #23272a;
+    font-size: 12px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.nav-items{
+    text-decoration: none;
+    color: white;
+    font-family: 'Inter';
+    font-size: 25px;
+    /* font-weight: 750; */
+}
+.cards{
+ margin-top: 56px;
+ /* gap: 20px; */
+ width: 100%;
+ margin-left: auto;
+ margin-right: auto;
+ /* display: grid; */
+ /* grid-template-columns: repeat(3, 1fr); */
+}
+.do-it{
+    display: block;
+    color: #23272a;
+    text-align: center;
+    font-weight: 700;
+    line-height: 120%;
+    font-size: clamp(18px,3vw,32px);
+    font-family: Arial, Helvetica, sans-serif;
+}
+.cards-top{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    margin-bottom: 20px;
+}
+.cards-bottom{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    margin-top: 20px;
+}
+.card1{
+    background: linear-gradient(142.53deg,#00a295,#26e8f4 98.75%),#3dcda7;
+    border-radius: 8px;
+    padding: 2rem 2rem 0 2rem;
+    color: white;
+    text-align: center;
+}
+.card2{
+    background: linear-gradient(321.82deg,#21f2ff,#4181ff 59.22%,#4475ff 98.02%),#7196ff;
+    border-radius: 8px;
+    padding: 2rem 2rem 0 2rem;
+    color: white;
+    text-align: center;
+}
+.card3{
+    background: linear-gradient(138.46deg,#3e70ff 1.48%,#9a98ff 98.75%),#ff73fa;
+    border-radius: 8px;
+    padding: 2rem 2rem 0 2rem;
+    color: white;
+    text-align: center;
+}
+.card4{
+    background: linear-gradient(141.85deg,#7e7bff,#ff73fa);
+    border-radius: 8px;
+    padding: 2rem 2rem 0 2rem;
+    color: white;
+    text-align: center;
+}
+.card5{
+    background: linear-gradient(141.48deg,#f837ee 1.35%,#ffcd4b);
+    border-radius: 8px;
+    padding: 2rem 2rem 0 2rem;
+    color: white;
+    text-align: center;
+}
+.card6{
+    background: linear-gradient(321.73deg,#ffcd4b -1.09%,#ee6315 100.65%);
+    border-radius: 8px;
+    padding: 2rem 2rem 0 2rem;
+    color: white;
+    text-align: center;
+}
+.text1{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+}
+.text2{
+    margin-top: 10px;
+    margin-bottom: 12px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 13px;
+    line-height: 24px;
+}
+.cols-imgs{
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    vertical-align: baseline;
+}
+.log:visited{
+    color: red;
+}
+.col-imgss{
+    width: 177px;
+    height: 116px;
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.col-imgss5{
+    padding-bottom: 1.5rem;
+    width: 177px;
+    height: 116px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.americanflag {
+    width: 24px;
+    height: 16px;
+    margin: 0px 8px 0px 0px;
+}
+#dropcountry {
+    background-color: rgb(35,39,42);
+    border-color: rgb(35,39,42);
+}
+.p-blue {
+    color: #5865f2;
+}
+.underline:hover {
+    text-decoration: underline;
+}
+.line { 
+   border-color: rgb(88,101,242);
+}
+.bottom-sixth {
+    display: grid;
+    grid-template-columns: auto auto;
+    justify-content: space-around;
+    grid-column-gap: 30em;
+    margin-top: 2em;
+}
+.bottom-discord {
+    font-size: larger;
+    margin: 0px 0px;
+}
+.botom-signup {
+    background: rgb(88,101,242);
+    border-radius: 40px; 
+    width: 6em; 
+    height: 3em;
+    border-color: rgb(88,101,242);
+    color: white;
+    align-content: center;
+    border-style: none;
+}
+.nitro-classic{
+    background-color: #738BD7;
+}
+.batman{
+    border-radius: 10px;
+    align-items: center;
+    padding: 10px 20px 10px 20px;
+    border: none;
+    background: linear-gradient(142.53deg,#00a295,#26e8f4 98.75%),#3dcda7;
+    font-size: 40px;
+    color: white;
 }
